--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-pod
+  name: {{ .Release.Name }}-service
 spec:
   ports:
   - port: 5000
     protocol: TCP
     targetPort: 5000
   selector:
-    run: {{ .Release.Name }}-pod 
+    run: {{ .Release.Name }}-pod
   type: NodePort
