--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,19 +1,12 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
+  name: {{ .Values.name  }}
   labels:
-    run: {{ .Release.Name }}-deploy
-  name: {{ .Release.Name }}-deploy
+    run: {{ .Values.name }}
 spec:
-  replicas: {{ .Values.replicas }}
-  selector:
-    matchLabels:
-      app: flaskex
-  template:
-    metadata:
-      labels:
-        app: flaskex
-    spec:
-      containers:
-      - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-        name: {{ .Values.name }}
+  containers:
+  - image: {{ .Values.image }}:{{ .Values.tag }}
+    name: {{ .Values.name }}
+    ports:
+    - containerPort: {{ .Values.port }}
